Fix spacing

--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body{
 }
 
 .info{
-    margin: 3em 0;
+    margin: 2em 0;
     text-align: center;
 }
 
